# mappingturtles

./: .gitignore  CMakeLists.txt  README.md  package.xml
docker/: test_server
launch/: .adhocbot.launch.swp  .adhocbotstest.launch.swp  .gmapping_bot.launch.swp  .karto_bot.launch.swp  .simulate5.launch.swp  .turtlebot_in_stage.launch.swp  .turtlebot_sim.launch.swp  adhoc_simulator.launch  adhocbot.launch  adhocbotstest.launch  ase_slam.launch  ase_slam_controller.launch  ase_slam_layer.launch  control1.launch  control2.launch  gmapping_bot.launch  karto_bot.launch  karto_controller.launch  multiturtle.launch  multiturtle_distributed.launch  play_sim.launch  record_sim.launch  robots_in_stage.launch  simulate1.launch  simulate2.launch  simulate5.launch  slam.launch  test_map_merge  turtlebot_in_stage.launch  turtlebot_in_stage_karto.launch  turtlebot_sim.launch  turtlebot_x2.launch  tutorial4.launch  visualization.launch
param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  gmapping_params.yaml  karto_mapper.yaml  local_costmap_params.yaml  move_base_params.yaml  planner.yaml  ros.yaml
rviz/: adhoc.rviz  adhov.rviz  ase_exploration.rviz  karto_viz.rviz  multi_turtle.rviz
scripts/: coordinator.py  data.json  explorer.py  graph.py  mapsharer.py  metrics.py
src/: ground_truth_publisher.cpp  metrics.cpp
world/: cross-clustered.world  cross.pgm  five-world-clustered.world  five-world.world  floorplan.inc  garage.pgm  home-2-clustered.world  home-2-clustered.world~  home.pgm  loop-clustered.world  loop.pgm  maze-clustered.world  maze.pgm  office.pgm  (+6 more)
(+1 files in other folders)
